Mobile theme W.I.P.: - Fix scrollbar does not work for mail tree in sidebar when browsing with iOS

--- a/mail/templates/pixelegg/app.less
+++ b/mail/templates/pixelegg/app.less
@@ -85,11 +85,6 @@ body {
     }
 
     // alles
-
-
-
-        margin: 0 1% 0 0 !important;
-
         // Box mit Header und Liste
         div#mail-index_nm{
 
@@ -1758,6 +1753,12 @@ div.mailComposeHeaderSection > table {
 		#popupMainDiv {
 			padding: 8px 8px 0 0;
 			background: none;
+		}
+		
+		.dtree {
+			div.containerTableStyle {
+				overflow: hidden;
+			}
 		}
 		#mail-compose {
 			.cke_chrome {
